topological relationships and spatial joins

--- a/spatial_joins.ipynb
+++ b/spatial_joins.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8b69e8e4",
+   "id": "1b8f89a6",
    "metadata": {},
    "source": [
     "# Spatial joins\n",
-    "Often we want to add an attribute of a spatial object to another spatial object with witch it shares a spatial relationship. For example an object is an element of layer A that contains the administrative regions of a country and the other object is an element of a layer B that contains the areas that are at risk of flooding. A polygon of layer B, that represents an area at risk of flooding, may have a topological relationship with one or more administrative regions. With a spatial join of the objects in the two layers that share a certain topological relationship we will be able to associate the risk of flood to the administrative regions. \n",
+    "Often we want to add an attribute of a spatial object to another spatial object with which it shares a spatial relationship. For example an object is an element of layer A that contains the administrative regions of a country and the other object is an element of a layer B that contains the areas that are at risk of flooding. A polygon of layer B, that represents an area at risk of flooding, may have a topological relationship with one or more administrative regions. With a spatial join of the objects in the two layers that share a certain topological relationship we will be able to associate the risk of flood to the administrative regions. \n",
     "\n",
     "We start with a simple example of two datasets, a set of points and a set of polygons that represents neighborhoods in New York City. We want to add the name of the neighborhood to the point that lies within it."
    ]
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e37c252a",
+   "id": "c033b4c2",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff37ed3d",
+   "id": "b72e72dd",
    "metadata": {},
    "source": [
     "We create some points in the same area"
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e01dbd7d",
+   "id": "15485a94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0928e48",
+   "id": "0b55aaf7",
    "metadata": {},
    "source": [
     "We assign to these points the same Coordinate Reference System of the neighborhoods"
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2c81e910",
+   "id": "04294bbc",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "063428d7",
+   "id": "20b8f33e",
    "metadata": {},
    "source": [
     "Now we can create the spatial join between points and polygons based of their topological relationships. Between points and polygons two relationships are valid: $within$ and $contain$."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c7305769",
+   "id": "cbdacce9",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54809ab8",
+   "id": "948bd907",
    "metadata": {},
    "source": [
     "## References\n",
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f18ee6c9",
+   "id": "4e7ec529",
    "metadata": {},
    "outputs": [],
    "source": []
