marche flooding event 2022

--- a/dem_marche.ipynb
+++ b/dem_marche.ipynb
@@ -95,8 +95,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d82646bb",
+   "metadata": {},
+   "source": [
+    "We will use the values in the 2D array as a function of the coordinates z = f(x, y)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "7930929f",
    "metadata": {},
    "outputs": [
@@ -116,7 +124,7 @@
        " 'PROJCS[\"WGS 84 / UTM zone 32N\",GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4326\"]],PROJECTION[\"Transverse_Mercator\"],PARAMETER[\"latitude_of_origin\",0],PARAMETER[\"central_meridian\",9],PARAMETER[\"scale_factor\",0.9996],PARAMETER[\"false_easting\",500000],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH],AUTHORITY[\"EPSG\",\"32632\"]]')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,14 +132,14 @@
    "source": [
     "ds1 = gdal.Open(dem1_path, gdal.GA_ReadOnly)\n",
     "band1 = ds1.GetRasterBand(1)\n",
-    "data1 = band1.ReadAsArray()\n",
+    "z1 = band1.ReadAsArray()\n",
     "print(\"Band Type={}\".format(gdal.GetDataTypeName(band1.DataType)))\n",
     "band1.XSize, band1.YSize, band1.DataType, ds1.GetProjection()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "7004d4b6",
    "metadata": {},
    "outputs": [
@@ -151,7 +159,7 @@
        " 'PROJCS[\"WGS 84 / UTM zone 32N\",GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4326\"]],PROJECTION[\"Transverse_Mercator\"],PARAMETER[\"latitude_of_origin\",0],PARAMETER[\"central_meridian\",9],PARAMETER[\"scale_factor\",0.9996],PARAMETER[\"false_easting\",500000],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH],AUTHORITY[\"EPSG\",\"32632\"]]')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,14 +167,14 @@
    "source": [
     "ds2 = gdal.Open(dem2_path, gdal.GA_ReadOnly)\n",
     "band2 = ds2.GetRasterBand(1)\n",
-    "data2 = band2.ReadAsArray()\n",
+    "z2 = band2.ReadAsArray()\n",
     "print(\"Band Type={}\".format(gdal.GetDataTypeName(band2.DataType)))\n",
     "band2.XSize, band2.YSize, band2.DataType, ds2.GetProjection()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "9c84cf7e",
    "metadata": {},
    "outputs": [
@@ -185,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "69c55707",
    "metadata": {},
    "outputs": [
@@ -207,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "fb4adf85",
    "metadata": {},
    "outputs": [
@@ -225,6 +233,14 @@
     "if not min or not max:\n",
     "    (min,max) = band2.ComputeRasterMinMax(True)\n",
     "print(\"Min={:.3f}, Max={:.3f}\".format(min,max))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9925384c",
+   "metadata": {},
+   "source": [
+    "We have to change the coordinate value from the image reference system to a georeferenced coordinate system (see [Geotransform tutorial](https://gdal.org/tutorials/geotransforms_tut.html#geotransforms-tut))."
    ]
   },
   {
@@ -263,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "4774ba5b",
    "metadata": {},
    "outputs": [
@@ -273,7 +289,7 @@
        "(795198.0, 899742.0, 4797455.5, 4852554.5)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -293,12 +309,10 @@
    "source": [
     "fig = plt.figure(1, figsize=(10, 10))\n",
     "ax = plt.axes(projection='3d')\n",
-    "#ax.plot_surface(x1, y1, data1, cmap='BuGn', lw=0)\n",
     "ax.plot_surface(x1, y1, data1, rstride=100, cstride=100, edgecolor='none', cmap='gist_earth', lw=1)\n",
     "ax.plot_surface(x2, y2, data2, rstride=100, cstride=100, edgecolor='none', cmap='gist_earth', lw=1)\n",
     "ax.view_init(elev=55, azim=60) # ground level -> elevation=0, from above -> elevation=90\n",
-    "plt.axis('off')\n",
-    "#plt.show()"
+    "plt.axis('off')"
    ]
   },
   {
