--- a/spatial_relationships.ipynb
+++ b/spatial_relationships.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "d4ccd499",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "6483db48",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "cf93b31c",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "fa482a86",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "- Prime Meridian: Greenwich"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,17 +112,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "c8aff110",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Derived Projected CRS: EPSG:2263>\n",
+       "Name: NAD83 / New York Long Island (ftUS)\n",
+       "Axis Info [cartesian]:\n",
+       "- X[east]: Easting (US survey foot)\n",
+       "- Y[north]: Northing (US survey foot)\n",
+       "Area of Use:\n",
+       "- name: United States (USA) - New York - counties of Bronx; Kings; Nassau; New York; Queens; Richmond; Suffolk.\n",
+       "- bounds: (-74.26, 40.47, -71.8, 41.3)\n",
+       "Coordinate Operation:\n",
+       "- name: SPCS83 New York Long Island zone (US Survey feet)\n",
+       "- method: Lambert Conic Conformal (2SP)\n",
+       "Datum: North American Datum 1983\n",
+       "- Ellipsoid: GRS 1980\n",
+       "- Prime Meridian: Greenwich"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pois_df.crs = neighborhoods_df.crs"
+    "pois_df.crs = neighborhoods_df.crs\n",
+    "pois_df.crs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "1915f9ee",
    "metadata": {},
    "outputs": [
@@ -132,7 +157,7 @@
        "(905464.7390380859, 1075092.8783935546, 112485.76063504723, 280480.4142594267)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -157,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "41187131",
    "metadata": {},
    "outputs": [
@@ -167,7 +192,7 @@
        "(905465.0, 1075085.0, 112485.0, 280477.0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -192,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "6b351f7c",
    "metadata": {},
    "outputs": [
@@ -285,7 +310,7 @@
        "4  MULTIPOLYGON (((1012821.806 229228.265, 101278...  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "257d8278",
    "metadata": {},
    "outputs": [
@@ -306,7 +331,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -341,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "74703b3e",
    "metadata": {},
    "outputs": [
@@ -351,7 +376,7 @@
        "(905464.6245788574, 1075092.8838439942, 112484.83531799316, 280480.45832214353)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -386,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "328a5a2c",
    "metadata": {},
    "outputs": [
@@ -405,7 +430,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "c523411a",
    "metadata": {},
    "outputs": [
@@ -471,7 +496,7 @@
        "5  POINT (1009550.000 215571.000)  1225121  793979"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "id": "0b22ba45",
    "metadata": {},
    "outputs": [
@@ -501,7 +526,7 @@
        "(905464.7390380859, 1075092.8783935546, 112485.76063504723, 280480.4142594267)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -537,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "ef5a16f4",
    "metadata": {},
    "outputs": [
@@ -635,7 +660,7 @@
        "6          Bronx  464392.991824  1.186925e+09  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "192457da",
    "metadata": {},
    "outputs": [
@@ -665,7 +690,7 @@
        "(905464.7390380859, 1075092.8783935546, 112485.76063504723, 280480.4142594267)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -699,12 +724,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "efc8adc8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"24.95079456 60.16905356 0.0028198800000041047 0.0011548800000014126\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,120.339262)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"5.639760000008209e-05\" opacity=\"0.6\" d=\"M 24.950899,60.169158 L 24.953492,60.169158 L 24.95351,60.170104 L 24.950958,60.16999 L 24.950899,60.169158 z\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<shapely.geometry.polygon.Polygon at 0x2f05c1313d0>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from shapely.geometry import Point, Polygon\n",
+    "from shapely.geometry import Polygon\n",
     "\n",
     "# Create Point objects\n",
     "p1 = Point(24.952242, 60.1696017)\n",
@@ -712,67 +751,21 @@
     "\n",
     "# Create a Polygon\n",
     "coords = [(24.950899, 60.169158), (24.953492, 60.169158), (24.953510, 60.170104), (24.950958, 60.169990)]\n",
-    "poly = Polygon(coords)"
+    "poly = Polygon(coords)\n",
+    "poly"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "c39d9eae",
+   "cell_type": "markdown",
+   "id": "e473834a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POINT (24.952242 60.1696017)\n"
-     ]
-    }
-   ],
    "source": [
-    "# Let's check what we have\n",
-    "print(p1)"
+    "We check whether the points are within the  polygon"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "5b9f9dd2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POINT (24.976567 60.16125)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(p2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "6705991d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POLYGON ((24.950899 60.169158, 24.953492 60.169158, 24.95351 60.170104, 24.950958 60.16999, 24.950899 60.169158))\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(poly)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "0a7e30c7",
    "metadata": {},
    "outputs": [
@@ -782,7 +775,7 @@
        "True"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "3b789330",
    "metadata": {},
    "outputs": [
@@ -803,7 +796,7 @@
        "False"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,8 +814,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07b99e04",
+   "metadata": {},
+   "source": [
+    "We create two lines"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "id": "0fad9081",
    "metadata": {},
    "outputs": [],
@@ -834,8 +835,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f652809",
+   "metadata": {},
+   "source": [
+    "and we check whether they intersect"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "id": "ab1f0663",
    "metadata": {},
    "outputs": [
@@ -845,7 +854,7 @@
        "True"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,8 +864,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49439832",
+   "metadata": {},
+   "source": [
+    "whether they touch"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "id": "4db2e671",
    "metadata": {},
    "outputs": [
@@ -866,7 +883,7 @@
        "True"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "id": "88ed2431",
    "metadata": {},
    "outputs": [
@@ -887,10 +904,10 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.08 -0.08 1.1600000000000001 2.16\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,2.0)\"><g><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"0.0432\" points=\"0.0,0.0 1.0,1.0\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"0.0432\" points=\"1.0,1.0 0.0,2.0\" opacity=\"0.8\" /></g></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.multilinestring.MultiLineString at 0x1e8a7a9aee0>"
+       "<shapely.geometry.multilinestring.MultiLineString at 0x2f05d601fd0>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
