--- a/spatial_joins.ipynb
+++ b/spatial_joins.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c033b4c2",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "4  MULTIPOLYGON (((1012821.806 229228.265, 101278...  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,6 +143,48 @@
     "    {'geometry': Point(x, y), 'value1': x + y, 'value2': x - y}\n",
     "    for x, y in zip(range(b[0], b[2], int((b[2] - b[0]) / N)),\n",
     "                    range(b[1], b[3], int((b[3] - b[1]) / N)))])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5def49ac",
+   "metadata": {},
+   "source": [
+    "The spatial reference system is projected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a15c5ee9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Derived Projected CRS: EPSG:2263>\n",
+       "Name: NAD83 / New York Long Island (ftUS)\n",
+       "Axis Info [cartesian]:\n",
+       "- X[east]: Easting (US survey foot)\n",
+       "- Y[north]: Northing (US survey foot)\n",
+       "Area of Use:\n",
+       "- name: United States (USA) - New York - counties of Bronx; Kings; Nassau; New York; Queens; Richmond; Suffolk.\n",
+       "- bounds: (-74.26, 40.47, -71.8, 41.3)\n",
+       "Coordinate Operation:\n",
+       "- name: SPCS83 New York Long Island zone (US Survey feet)\n",
+       "- method: Lambert Conic Conformal (2SP)\n",
+       "Datum: North American Datum 1983\n",
+       "- Ellipsoid: GRS 1980\n",
+       "- Prime Meridian: Greenwich"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neighborhoods_df.crs"
    ]
   },
   {
