--- a/spatial_joins.ipynb
+++ b/spatial_joins.ipynb
@@ -147,16 +147,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5def49ac",
+   "id": "3cfd6e17",
    "metadata": {},
    "source": [
-    "The spatial reference system is projected"
+    "The neighborhoods' spatial reference system is projected: the datum is the North American Datum 1983 and the projection is Lambert Conic Conformal."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a15c5ee9",
+   "id": "e4cedf06",
    "metadata": {},
    "outputs": [
     {
