--- a/geospatial_vector_data.ipynb
+++ b/geospatial_vector_data.ipynb
@@ -3511,7 +3511,7 @@
    "metadata": {},
    "source": [
     "### Creating a spatial reference system\n",
-    "The [EPSG](https://epsg.io) has a list of spatial reference systems. We can use a spatial reference system to be used in a layer."
+    "The [EPSG](https://epsg.io) has a list of spatial reference systems. We can import a spatial reference system to be used in a layer."
    ]
   },
   {
