municipalities within a polygon

--- a/reprojection.ipynb
+++ b/reprojection.ipynb
@@ -525,29 +525,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "b2e31569",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def withinBlue(geom):\n",
-    "    #print(geom)\n",
-    "    return geom.within(blue_poligon_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "id": "bd62c404",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#for i in range(0, len(rgo_polygons_df)):\n",
-    "#    blue_poligon_df.intersects(rgo_polygons_df.loc[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 86,
    "id": "0f01c071",
    "metadata": {},
@@ -614,35 +591,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4279b217",
+   "metadata": {},
+   "source": [
+    "We can apply the within() operator between the set of red, orange and green polygons and the blue one"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 231,
    "id": "fc206311",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Luigi\\Anaconda3\\envs\\wekeo\\lib\\site-packages\\geopandas\\base.py:31: UserWarning: The indices of the two GeoSeries are different.\n",
-      "  warn(\"The indices of the two GeoSeries are different.\")\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0     True\n",
-       "1    False\n",
+       "0    False\n",
+       "1     True\n",
        "2    False\n",
        "dtype: bool"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rgo_polygons_df.intersects(blue_polygon_df)"
+    "rgo_polygons_df.within(blue_polygon_df.loc[0, 'geometry'])"
    ]
   },
   {
@@ -1514,7 +1491,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "7e0400bb",
+   "id": "dcb005df",
    "metadata": {},
    "outputs": [
     {
@@ -1536,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "0f413c80",
+   "id": "f2557c98",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "9669857b",
+   "id": "faa90aa0",
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ef48294",
+   "id": "0a1373b9",
    "metadata": {},
    "source": [
     "We can see that the relations found hold by looking at a map of the Marche region with the blue area superimposed over it"
@@ -1632,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "68f3d828",
+   "id": "43bd0b23",
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40ff0cc1",
+   "id": "dc08fbb5",
    "metadata": {},
    "source": [
     "The coordinate reference system used for the dataset is EPSG:32632, i.e WGS84 projected using Transverse Mercator"
@@ -1777,7 +1754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a038ade",
+   "id": "c4fe16d3",
    "metadata": {},
    "source": [
     "We can see that all the geometries of the municipalities, that is their polygons, lie within the geometry of the Marche region "
@@ -1808,7 +1785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f2b11ef",
+   "id": "3f055bcb",
    "metadata": {},
    "source": [
     "Now we want to see which municipality lies within the blue area"
@@ -1817,7 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "1795bff8",
+   "id": "5edf390a",
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa8155ba",
+   "id": "ddf2428f",
    "metadata": {},
    "source": [
     "There are 34 municipalities that lie within the blue area"
@@ -1848,7 +1825,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "25d79537",
+   "id": "f84bdd1f",
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6937b878",
+   "id": "ca799417",
    "metadata": {},
    "source": [
     "We can plot them"
@@ -1915,7 +1892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df63f9e5",
+   "id": "65cebcf0",
    "metadata": {},
    "outputs": [],
    "source": []
