--- a/topological_operators.ipynb
+++ b/topological_operators.ipynb
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4da682bb",
+   "id": "59acbfa2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c262b4d7",
+   "id": "e5eacc4f",
    "metadata": {},
    "source": [
     "We can have a look at the WGS84 coordinate reference system. As we can see, no projection on a 2d plane is used, the units are degrees for latitude and longitude that are used to locate a point on the ellipsoid."
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f537fa9",
+   "id": "7bae2fdd",
    "metadata": {},
    "source": [
     "We apply the same transformation to the other layers"
@@ -1190,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "df6ff1eb",
+   "id": "a7921ca6",
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d04329c9",
+   "id": "80242fe6",
    "metadata": {},
    "source": [
     "As we can see the CRS of the Marche region is EPSG:32632, that is a projected Transverse Mercator, so we will use the transformed layers to test the spatial relations between our colored layers and the layer of the Marche region. "
@@ -1428,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "5aacd786",
+   "id": "a346a03f",
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec682cdb",
+   "id": "cf9103e7",
    "metadata": {},
    "source": [
     "There are 66 municipalities that intersect our blue layer, 32 more than those that lie within it."
@@ -1993,7 +1993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ffab5e5",
+   "id": "31bf86d9",
    "metadata": {},
    "source": [
     "We can plot the municipalities that intercept (or lie in) the blue layer. The union of the geometries of these municipalities contains the blue area. "
@@ -2176,7 +2176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f2b933c",
+   "id": "bd78c828",
    "metadata": {},
    "source": [
     "Finally we plot the geometries of the municipalities that intersect our blue layer but do not lie in it."
@@ -2222,11 +2222,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3efc155",
+   "id": "7ecf403f",
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "We have seen some examples of spatial relations beteween polygons in GeoPandas. We have applied such relations to geometries of the municipalities of the Marche region in Italy. We have changed the coordinate reference system of our example layers to be the same as that used for the Marche region and its administrative units. We have also performed further logical operation such as dividing the geometries of the municipalities that strictly intersect one of our fictional layer from those that lie completely in our layer. Spatial relations are fundamental to perform GIS analysis over multiple layers. We have underlined that they also provide a mean to integrate spatial information, such as flooded areas, with contextual information in particular administrative units, that allows the integration of external data sources by using the administrations' name or identifier.       \n"
+    "We have seen some examples of spatial relations between polygons in GeoPandas. We have applied such relations to geometries of the municipalities of the Marche region in Italy. We have changed the coordinate reference system of our example layers to be the same as that used for the Marche region and its administrative units. We have also performed a further logical operation dividing the geometries of the municipalities that strictly intersect one of our fictional layer from those that lie completely in our layer using logical operators on the result of the spatial relations. Spatial relations are fundamental to perform GIS analysis over multiple layers. We have underlined that they also provide a mean to integrate spatial information, such as flooded areas, with contextual information in particular administrative units, that allows the integration of external data sources by using the administrations' name or identifier.       \n"
    ]
   },
   {
