--- a/geospatial_raster_data.ipynb
+++ b/geospatial_raster_data.ipynb
@@ -3296,12 +3296,12 @@
    "metadata": {},
    "source": [
     "#### Bilinear interpolation\n",
-    "This [algorithm](https://en.wikipedia.org/wiki/Bilinear_interpolation) uses the four nearest cell centers. It can be implemented as two functions. The first functions computes the indices for the cells of the resampled raster. "
+    "If we want to resize a n image with a ratio that is not an integer we cannot simply use the slicing algorithm. A choice is to use [bilinear interpolation](https://en.wikipedia.org/wiki/Bilinear_interpolation). The algorithm uses the four nearest cell centers. It can be implemented as two functions. The first function computes the indices for the cells of the resampled raster, and the second function computes the value from the values of the four nearest neighbors. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d43040b1",
    "metadata": {},
    "outputs": [],
@@ -3332,7 +3332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "40ac4d58",
    "metadata": {},
    "outputs": [],
@@ -3357,30 +3357,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "92a1c285",
+   "cell_type": "markdown",
+   "id": "8215e377",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "in_fn = 'data/raster/Nepal/everest.tif'\n",
-    "out_fn = 'data/raster/Nepal/everest_bilinear.tif'\n",
-    "cell_size = (0.02, -0.02)"
+    "We open an example raster file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "04b0533a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1ad8597b280>"
+       "<matplotlib.image.AxesImage at 0x1f9e3c3b280>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3398,6 +3394,7 @@
     }
    ],
    "source": [
+    "in_fn = 'data/raster/Nepal/everest.tif'\n",
     "in_ds = gdal.Open(in_fn)\n",
     "in_band = in_ds.GetRasterBand(1)\n",
     "in_data = in_band.ReadAsArray()\n",
@@ -3405,19 +3402,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1ed27a47",
+   "metadata": {},
+   "source": [
+    "We compute the coordinates of the output raster file by passing the factor to be used for the transformation along the two directions west-east and north-south. With the new coordinates we can apply the nearest neighbor algorithm to compute the values of the output raster file."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "9f1fb41e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "cell_size = (0.02, -0.02)\n",
     "x, y = get_indices(in_ds, *cell_size)\n",
     "outdata = bilinear(in_ds.ReadAsArray(), x, y)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49ac5d2a",
+   "metadata": {},
+   "source": [
+    "We create the output file to store the result"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4a079f14",
    "metadata": {},
    "outputs": [
@@ -3427,12 +3441,13 @@
        "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "out_fn = 'data/raster/Nepal/everest_bilinear.tif'\n",
     "driver = gdal.GetDriverByName('GTiff')\n",
     "rows, cols = outdata.shape\n",
     "out_ds = driver.Create(out_fn, cols, rows, 1, gdal.GDT_Int32)\n",
@@ -3441,7 +3456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "b46a8b94",
    "metadata": {},
    "outputs": [
@@ -3451,7 +3466,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3465,10 +3480,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "47eaaf1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[584.0, 8454.0, 4515.728635682175, 1371.0860010092429]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "out_band = out_ds.GetRasterBand(1)\n",
     "out_band.WriteArray(outdata)\n",
@@ -3477,18 +3503,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "442bad51",
+   "metadata": {},
+   "source": [
+    "Finally we plot the output file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "4cf1496e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1ad85912160>"
+       "<matplotlib.image.AxesImage at 0x1f9e3d4c760>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
